force-app/main/default/objects/List_Product_Group__c/List_Product_Group__c.object-meta.xml
<CustomObject>
    <description>this is the collection name of the group for products</description>
    <label>List Product Group</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>List Product Groups</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>