force-app/main/default/objects/List_Product_Group__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Company to which this product group is tied</description>
    <label>User Company</label>
    <referenceTo>Company__c</referenceTo>
    <relationshipLabel>List Product Groups</relationshipLabel>
    <relationshipName>List_Product_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>