force-app/main/default/objects/List_Product_Group__c/fields/Id_Country__c.field-meta.xml
<CustomField>
    <fullName>Id_Country__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>this holds the country</description>
    <label>User Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>List Product Groups</relationshipLabel>
    <relationshipName>List_Product_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>