force-app/main/default/objects/List_Product_Group__c/fields/In_Use__c.field-meta.xml
<CustomField>
    <fullName>In_Use__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a product group is in use or not</description>
    <label>In Use</label>
    <type>Checkbox</type>
</CustomField>