force-app/main/default/objects/List_Product_Group__c/recordTypes/AT_List_Product_Group.recordType-meta.xml
<RecordType>
    <fullName>AT_List_Product_Group</fullName>
    <active>true</active>
    <label>AT List Product Group</label>
</RecordType>