force-app/main/default/objects/List_Product_Group__c/recordTypes/CD_List_Product_Group.recordType-meta.xml
<RecordType>
    <fullName>CD_List_Product_Group</fullName>
    <active>true</active>
    <label>CD List Product Group</label>
</RecordType>