force-app/main/default/objects/List_Product_Group__c/recordTypes/CZ_List_Product_Group.recordType-meta.xml
<RecordType>
    <fullName>CZ_List_Product_Group</fullName>
    <active>true</active>
    <label>CZ List Product Group</label>
</RecordType>