force-app/main/default/objects/List_Product_Group__c/recordTypes/DE_List_Product_Group.recordType-meta.xml
<RecordType>
    <fullName>DE_List_Product_Group</fullName>
    <active>true</active>
    <label>DE List Product Group</label>
</RecordType>