force-app/main/default/objects/List_Product_Group__c/recordTypes/DH_AU_List_Product_Group.recordType-meta.xml
<RecordType>
    <fullName>DH_AU_List_Product_Group</fullName>
    <active>true</active>
    <label>DH AU List Product Group</label>
</RecordType>