force-app/main/default/objects/List_Product_Group__c/recordTypes/FI_List_Product_Group.recordType-meta.xml
<RecordType>
    <fullName>FI_List_Product_Group</fullName>
    <active>true</active>
    <label>FI List Product Group</label>
</RecordType>