force-app/main/default/objects/List_Product_Group__c/recordTypes/FP_List_Product_Group.recordType-meta.xml
<RecordType>
    <fullName>FP_List_Product_Group</fullName>
    <active>true</active>
    <label>FP List_Product Group</label>
</RecordType>