force-app/main/default/objects/List_Product_Group__c/recordTypes/HU_List_Product_Group.recordType-meta.xml
<RecordType>
    <fullName>HU_List_Product_Group</fullName>
    <active>true</active>
    <description>Hungary List Product Group</description>
    <label>HU List Product Group</label>
</RecordType>