force-app/main/default/objects/List_Product_Group__c/recordTypes/PY_List_Product_Group.recordType-meta.xml
<RecordType>
    <fullName>PY_List_Product_Group</fullName>
    <active>true</active>
    <description>Record type for Pedidos Ya and in future to be global for all countries</description>
    <label>PY List_Product Group</label>
</RecordType>