force-app/main/default/objects/List_Product_Group__c/recordTypes/SE_List_Product_Group.recordType-meta.xml
<RecordType>
    <fullName>SE_List_Product_Group</fullName>
    <active>true</active>
    <label>SE List Product Group</label>
</RecordType>