force-app/main/default/objects/List_Product_Group__c/recordTypes/Talabat_List_Product_Group.recordType-meta.xml
<RecordType>
    <fullName>Talabat_List_Product_Group</fullName>
    <active>true</active>
    <label>Talabat List Product Group</label>
</RecordType>