force-app/main/default/objects/List_Product_Group__c/recordTypes/UK_List_Product_Group.recordType-meta.xml
<RecordType>
    <fullName>UK_List_Product_Group</fullName>
    <active>true</active>
    <label>UK List Product Group</label>
</RecordType>