force-app/main/default/objects/List_Product_Group__c/recordTypes/Yogiyo_List_Product_Group.recordType-meta.xml
<RecordType>
    <fullName>Yogiyo_List_Product_Group</fullName>
    <active>true</active>
    <description>this is the product group for korea</description>
    <label>Yogiyo List Product Group</label>
</RecordType>