force-app/main/default/objects/List_Product_Group__c/validationRules/PG_Name_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>PG_Name_Required</fullName>
    <active>true</active>
    <description>The name of the product group is required</description>
    <errorConditionFormula>ISBLANK( Name )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Product Group name is required.</errorMessage>
</ValidationRule>