force-app/main/default/objects/List_Product_Group__c/listViews/Germany.listView-meta.xml
<ListView>
    <fullName>Germany</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Id_Country__c</field>
        <operation>equals</operation>
        <value>germany</value>
    </filters>
    <label>Germany</label>
    <language>en_US</language>
</ListView>